--- a/package.json
+++ b/package.json
@@ -285,6 +285,7 @@
     "react-native-linear-gradient": "2.5.6",
     "react-native-material-textfield": "0.16.1",
     "react-native-modal": "^12.1.0",
+    "react-native-nfc-manager": "^3.14.6",
     "react-native-os": "^1.2.6",
     "react-native-progress": "3.5.0",
     "react-native-push-notification": "git+https://github.com/MetaMask/react-native-push-notification.git#975e0e6757c40e3dce2d1b6dd3d66fc91127ac4c",
@@ -361,8 +362,8 @@
     "@testing-library/react": "14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "12.1.2",
-    "@types/i18n-js": "^3.8.4",
     "@types/enzyme": "^3.10.12",
+    "@types/i18n-js": "^3.8.4",
     "@types/is-url": "^1.2.30",
     "@types/jest": "^28.1.8",
     "@types/node": "^17.0.21",
